# axum-forge

./: .gitignore  Cargo.toml  README.md
axum-forge/: Cargo.toml
axum-forge/src/: error.rs  main.rs  migration.rs
axum-forge/src/cli/: migration.rs  mod.rs
template/axum-forge-template/: Cargo.toml  docker-compose.yml
template/axum-forge-template/migrations/: 0001_create_items.down.sql  0001_create_items.up.sql
template/axum-forge-template/src/: app.rs  error.rs  main.rs  state.rs  telemetry.rs
template/axum-forge-template/src/config/: app.rs  db.rs  mod.rs
template/axum-forge-template/src/modules/: error.rs  mod.rs
template/axum-forge-template/src/modules/health/: handlers.rs
template/axum-forge-template/src/modules/items/: dto.rs  handlers.rs  mod.rs  model.rs  repo.rs
