[package]
name = "axum-forge"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "migrate"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
thiserror = "1"